<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_to_sign_up">Click to Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="username">Username</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="settings">Settings</string>
    <string name="group_chat">Group Chat</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">814248242558-jrpgc3qbv26hbfjisbvk13k53h4os2qf.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calls_fragment">CALLS FRAGMENT</string>
    <string name="status_fragment">STATUS FRAGMENT</string>
    <string name="chats_fragment">CHATS FRAGMENT</string>
    <!-- Strings used for fragments for navigation -->

</resources>