<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/w1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_whatsapp"
            android:id="@+id/imageView"
            android:contentDescription="@string/todo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmail"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/chatbackground"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/chatbackground"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtClickSignUp"
            android:text="@string/click_to_sign_up"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:cornerRadius="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGoogle"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="Google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnFacebook"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor = "@color/white"
                app:backgroundTint = "#3c5793"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignUpPhone"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>


</LinearLayout>